solve some issues add dark mode but half code

--- a/home/landing page/home.css
+++ b/home/landing page/home.css
@@ -112,7 +112,10 @@
 .room h3{
   font-weight:500;
 }
-
+.dark_box{
+ 
+  color: rgb(181, 174, 174);
+}
 .filter{
   z-index: 60;
 }
